<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_baseline_restaurant_menu_24"
        android:title="@string/menu" />

    <item
        android:id="@+id/offers"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/offers" />

    <item
        android:id="@+id/cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />

    <item
        android:id="@+id/coupons"
        android:icon="@drawable/ic_baseline_local_offer_24"
        android:title="@string/coupons" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />
</menu>